package usecases.user.add;

public interface IUserAddUseCase {
    UserAddOutput create(UserAddInput input);
}
