package usecases.user.add;

public record UserAddInput(String userName) {
}
