@startuml
title ユーザー登録 クラス図

' 参考
' - https://www.baeldung.com/spring-boot-clean-architecture
' - https://nrslib.com/clean-architecture-with-java/

package domain.entities.user {
    ' Data Access Interface
    interface IUserRepository {
        + save(User user)
    }

    interface IUser

    interface IUserFactory {
        IUser create(String name)
    }

    ' Value Object
    class UserId
    ' Value Object
    class UserName

    package domain.entities.user.impl {
        User <|-- IUser
        UserFactory <|-- IUserFactory

        class User {
            - UserName name
        }
    }
}

package usecases {
    package usecases.user.add {

        ' Input Data<DS>
        class UserAddInput

        ' Output Data<DS>
        class UserAddOutput

        ' Input Boundary
        interface IUserAddUseCase {
            UserAddOutput handle(UserAddInput input)
        }

        package usecases.user.add.impl {
            UserAddInteractor <|-- IUserAddUseCase

            class UserAddInteractor {
                - UserFactory userFactory
                - UserRepository userRepository
            }
        }
    }
}

package presenter {
    package presenter.user.add {
        ' ViewModel
        class UserAddViewModel
        ' Output Boundary
        interface IUserAddPresenter {
            UserAddViewModel handle(UserAddOutput output)
        }

        package presenter.user.add.impl {
            UserAddPresenter <|-- IUserAddPresenter
        }
    }
}

package repository {
    package repository.user {
        UserRepositoryInMemory <|-- IUserRepository
    }
}

@enduml
